--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -20,10 +20,8 @@
 </blockquote>
 
 <blockquote>
-  "A human must turn information into intelligence or
-  knowledge. We've tended to forget that no computer will ever ask
-  a new question." &mdash; <a href =
-"https://en.wikipedia.org/wiki/Grace_Hopper">Grace Hopper</a>
+  "Yippee Ki Yay Motherfucker." &mdash; <a href =
+"https://en.wikipedia.org/wiki/John_McClane">John McClane</a>
 </blockquote>
 
 <h3>Quotes on Language</h3>
