--- a/workshop1/w2.html
+++ b/workshop1/w2.html
@@ -37,6 +37,7 @@
         <ul>
           <li><a href="https://www.nidcd.nih.gov/health/american-sign-language">Sign Language</a></li>
           <li><a href="https://en.wikipedia.org/wiki/Spoken_language">Spoken Language</a> </li>
+          <li><a href="http://changingminds.org/techniques/body/parts_body_language/nose_body_language.htm">The Language of Noses</a></li>
           <li><a href ="http://mediengeschichte.dnb.de/DBSMZBN/Web/EN/Navigation/SoundsSymbolsScript/sounds_symbols_script_doorpage.html">Written Language</a></li>
         </ul>
       </li>
